--- a/app/views/drafts-gui/blocked-01.html
+++ b/app/views/drafts-gui/blocked-01.html
@@ -22,6 +22,8 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">You cannot notify this product until you have notified <a href="#blocked" class="govuk-notification-banner__link">Aliquam faucibus </a><span class="govuk-visually-hidden"> via the nanomaterials page</span>.</p>
+
+    <!-- once it is notified, this page would load with the Aliquam faucibus status set to Not started (with hyperlink)? -->
   </div>
 </div>
 
@@ -116,7 +118,7 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Category and formation
+                    <span class="app-task-list__section-number">4. </span> Category and formulation
                 </h2>
 
                 <ul class="app-task-list__items">
