--- a/app/views/drafts-gui/draft-2_pt-2.html
+++ b/app/views/drafts-gui/draft-2_pt-2.html
@@ -105,7 +105,7 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Category and formation
+                    <span class="app-task-list__section-number">4. </span> Category and formulation
                 </h2>
 
                 <ul class="app-task-list__items">
