--- a/app/views/drafts-gui/index.html
+++ b/app/views/drafts-gui/index.html
@@ -56,6 +56,8 @@
 
         <p class="govuk-body-m">For development ease, we keep tasks linear, so that they can't be started before the previous <b>section</b> is completed. (A future featue could be the option, for single products, to complete section 3 before 2, and 4 before completing any nanomaterials, or the corresponding Category immediately after the multi-item item, etc). Future behaviour might also include the ability to leave a task halfway through and when clicking the task again on the draft page the user restarts the task where they left off? (A GDS 'In progress' tab status - pale blue - already exists).</p>
 
+        <p class="govuk-body-m">The blocked pages/journeys require that we record the nanomaterial name and which in one scenario can then be picked up again as 'Not started' (but already using the name?)</p>
+
         <p class="govuk-body-s"><i>The back link (at the top of the page) in the real service will return the user to the Cosmetic Products page.</i></p>
 
 
