--- a/app/views/index.html
+++ b/app/views/index.html
@@ -106,8 +106,8 @@
       </ul>
 
       <h3 class="govuk-heading-m">Cosmetic Product draft page</h3>
-      <p class="govuk-body-s">A series of 3 user journeys stepping through the visual task based flow of the draft page required for breaking the current 'add a product' service broken into smaller tasks: </p>
-      <p class="govuk-body"><a href="/drafts-gui/index.html" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
+      <p class="govuk-body-s">A series of 3 user journeys stepping through the visual task based flow of the draft page - required for breaking the current 'add a product' service into smaller tasks: </p>
+      <p class="govuk-body"><a href="/drafts-gui/index.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Drafts <abbr>GUI</abbr> 1194</a></p>
 
 
     </div>
