--- a/app/views/drafts-gui/draft-1_pt-4.html
+++ b/app/views/drafts-gui/draft-1_pt-4.html
@@ -59,7 +59,7 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">3. </span> Category and formation
+                    <span class="app-task-list__section-number">3. </span> Category and formulation
                 </h2>
 
                 <ul class="app-task-list__items">
