--- a/app/views/drafts-gui/draft-3_pt-3.html
+++ b/app/views/drafts-gui/draft-3_pt-3.html
@@ -144,7 +144,7 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">5. </span> Category and formation
+                    <span class="app-task-list__section-number">5. </span> Category and formulation
                 </h2>
 
                 <ul class="app-task-list__items">
