--- a/app/views/drafts-gui/draft-3_step-1.html
+++ b/app/views/drafts-gui/draft-3_step-1.html
@@ -19,9 +19,9 @@
         <ul>
             <li>The 'Product details' task(s) title has changed to 'Multi-item kit'</li>
             <li>and a new section inserted: Multi-item details</li>
-            <li>The 'Category and formation' section has also changed to now list the same number of items (with the same holding titles); they are now linked</li>
+            <li>The 'Category and formulation' section has also changed to now list the same number of items (with the same holding titles); they are now linked</li>
             <li>Add/Remove links for the 'Multi-item details' section are also added</li>
-            <li>Note the hidden HTML in the new 'Category and formation' text items: <code><span class="govuk-visually-hidden">Categorise</span></code></li>
+            <li>Note the hidden HTML in the new 'Category and formulation' text items: <code><span class="govuk-visually-hidden">Categorise</span></code></li>
         </ul>
 
         <hr>
