--- a/app/views/drafts-gui/draft-1_pt-4.html
+++ b/app/views/drafts-gui/draft-1_pt-4.html
@@ -66,7 +66,7 @@
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
                             <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-details-status">
-                                Category and formation
+                                Category and formulation
                             </a>
                         </span>
 
