--- a/app/views/drafts-gui/draft-2_pt-3.html
+++ b/app/views/drafts-gui/draft-2_pt-3.html
@@ -112,7 +112,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Category and formation
+                            Category and formulation
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-details-status">Cannot start yet</b>
