--- a/app/views/drafts-gui/draft-3_step-5b.html
+++ b/app/views/drafts-gui/draft-3_step-5b.html
@@ -16,7 +16,7 @@
 
             </li>
             <li>When following the items task journey, we add the item title to the H1 title of each page (starting with its holding title)</li>
-            <li>When returning to the draft page, the corresponding task in the 'Category and formation' section has updated its name. (The two are linked). The first item link demonstrates this.</li>
+            <li>When returning to the draft page, the corresponding task in the 'Category and formulation' section has updated its name. (The two are linked). The first item link demonstrates this.</li>
         </ul>
 
         <p><sup>*</sup> The "what is the item's name" page only appears at the start of the Complete items journey if the status of the product is a multi-item kit. Otherwise the new 'Select the nanomaterials' page is the starting page of the task.</p>
