--- a/app/views/drafts-gui/template.html
+++ b/app/views/drafts-gui/template.html
@@ -113,7 +113,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Category and formation
+                            Category and formulation
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
