responsible person pages

--- a/app/views/create-cases-add-products/what-is-the-product-name.html
+++ b/app/views/create-cases-add-products/what-is-the-product-name.html
@@ -18,15 +18,13 @@
     <div class="govuk-grid-column-three-quarters">
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">What is the product name?</h1>
 
-        <div class="govuk-hint">
+        <p class="govuk-body opss-secondary-text">
           Sometimes the brand and model name can form part of the full product name. For example, the Dyson Small Ball Animal 2, is an upright vaccum cleaner.
-        </div>
+        </p>
 
-        <div class="govuk-hint govuk-!-margin-bottom-8">
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-8">
           Provide and categorise what information you can.
-        </div>
-
-
+        </p>
 
     </div>
   </div>
