forms work on COS and PSD

--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -24,25 +24,25 @@
         <details class="govuk-details opss-details--sm govuk-!-margin-top-4" data-module="govuk-details">
             <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
-                    Help with the Responsible Person details
+                    Help with the <abbr>UK</abbr> Responsible Person details
                 </span>
             </summary>
             <div class="govuk-details__text">
 
                 <p class="govuk-body-s">
-                    A Responsible Person can be a business, in the law this is called a 'legal person'. A Responsible Person can also be a living person, in the law this is called a 'natural person'.
+                    A Responsible Person can be a business - in the law this is called a 'legal person'. Or a Responsible Person can be a living person - in the law this is called a 'natural person'.
                 </p>
 
                 <p class="govuk-body-s">
-                    The Responsible Person must be a legal entity in the <abbr>UK</abbr>.
-                </p>
-
-                <p class="govuk-body-s">
-                    The Responsible Person must provide a <abbr>UK</abbr> address.
+                    The Responsible Person - the legal person or natural person - must be a legal entity established in the <abbr>UK</abbr>. The address provided must be that of the legal entity named as the Responsible Person. The Responsible Person must provide a <abbr>UK</abbr> address, which cannot be a <abbr title="Post Office">PO</abbr> box or mail forwarding address.
                 </p>
 
                 <p class="govuk-body-s">
                     A Responsible Person is legally bound by the obligations in the Cosmetics Regulation.
+                </p>
+
+                <p class="govuk-body-s">
+                    For more information about a <abbr>UK</abbr> Responsible Person: <br class="opss-br-desktop"><a href="https://www.gov.uk/guidance/regulating-medical-devices-in-the-uk#responsible" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">gov.uk/guidance/regulating-medical-devices-in-the-uk (opens in a new tab)</a>.
                 </p>
 
             </div>
@@ -52,7 +52,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                The <abbr>UK</abbr> address provided must not be a <abbr title="Post Office">PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
+                The <abbr>UK</abbr> address provided must not be a <abbr>PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
             </strong>
         </div>
 
@@ -71,7 +71,7 @@
                 </label>
 
                 <div id="name-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-width-three-quarters">
-                    The name of the business, individual or sole trader registered as the legal entity known as the Responsible Person.
+                    The name of the business, individual or sole trader named as the legal entity of Responsible Person.
                 </div>
 
                 <input class="govuk-input govuk-!-width-two-thirds" id="responsible_persons_details_form_name" name="responsible_persons_details_form[name]" type="text" aria-describedby="name-hint">
@@ -85,7 +85,7 @@
                 </legend>
 
                 <div id="address-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-margin-bottom-6 govuk-!-width-three-quarters">
-                    The address of the legal entity known as the Responsible Person<!-- and not necessarily your own address-->.
+                    The address of the legal entity named as the Responsible Person.
                 </div>
 
                 <div class="govuk-form-group govuk-!-margin-bottom-5">
