--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -345,4 +345,8 @@ ul.opss-radio-list {
         background-color: govuk-colour("light-grey");
         padding: govuk-spacing(4) govuk-spacing(2) govuk-spacing(1) govuk-spacing(4);
     }
+
+    label:before {
+        background: govuk-colour("white");
+    }
 }
