--- a/app/views/responsible-person-address/responsible-person-address_individual.html
+++ b/app/views/responsible-person-address/responsible-person-address_individual.html
@@ -24,7 +24,7 @@
         <details class="govuk-details opss-details--sm govuk-!-margin-top-4" data-module="govuk-details">
             <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
-                    Help with the Responsible Person details
+                    Help with the <abbr>UK</abbr> Responsible Person details
                 </span>
             </summary>
             <div class="govuk-details__text">
