--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,9 +56,20 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/start" target="_blank">Start flow <b>v2</b></a>: Alternative user flow (seperated)</li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/start" target="_blank">Start flow <b>v2</b></a>: Alternative user flow (seperated) - <b>use as HTML masters</b></li>
 
       </ul>
+
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            Start flow v2 - user testing (<b>do not</b> use as HTML masters)
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          Coming soon ... !
+        </div>
+      </details>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible" style="margin-bottom: 100px;">
 
