--- a/app/views/nanomaterials-1149/responsible-person.html
+++ b/app/views/nanomaterials-1149/responsible-person.html
@@ -13,13 +13,13 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="responsible-person-hint">
-              Responsible person
+              Responsible Person
             </h1>
           </div>
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
-            <!--*** link text is "Add a responsible person" if there aren't any ***-->
+            <!--*** link text is "Add a Responsible Person" if there aren't any ***-->
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-              Change the responsible person
+              Change the Responsible Person
             </a>
           </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <p id="responsible-person-hint" class="govuk-hint govuk-!-width-two-thirds">
-                    The responsible person can be a business, individual or sole trader and has an assigned contact.
+                    The Responsible Person can be a business, individual or sole trader and has an assigned contact.
                 </p>
             </div>
         </div>
@@ -63,7 +63,7 @@
   ]
 }) }}
 
-<h2 class="govuk-heading-s">Contact</h2>
+<h2 class="govuk-heading-s">Assigned contact</h2>
 
 {{ govukSummaryList({
     classes: "govuk-!-margin-bottom-8",
