started creating the user testing prototype

--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
@@ -146,7 +146,7 @@
         html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Upload <span class="govuk-visually-hidden">the Loremipsumipsum zip file </span>again</a>'
       },
       {
-        html: '<a href="#" class="govuk-link govuk-link--no-visited-state">Dismiss<span class="govuk-visually-hidden">the Loremipsumipsum error</span></a>'
+        html: '<input type="submit" name="commit" value="Dismiss" class="govuk-button opss-button-link" role="link" data-disable-with="Dismiss">'
       }
     ],
     [
