--- a/app/views/index.html
+++ b/app/views/index.html
@@ -95,7 +95,7 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none.html" target="_blank">Cosmetic products (0 incomplete, 3 errors example)</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-none-noerrors.html" target="_blank">Cosmetic products (0 incomplete, 0 errors example).</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-noerrors.html" target="_blank">Cosmetic products (2 incomplete, 0 errors example).</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state strike" href="/nanomaterials-1149/cosmetic-products-alt-01-refresh.html" target="_blank">Cosmetic products (with errors and Refresh message). <br>Continued temporary use.</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state strike govuk-body-s" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Old - Cosmetic products</a></li>
           </ul>
         </li>
